# solores

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  add_anchor_fields.py  batch_validation_complete.sh  boop.json  debug_filter  debug_filter.rs  debug_filter_fixed  debug_filter_fixed.rs  debug_naming.rs  debug_parse.rs  test_case.rs
idls/idl-core/: Cargo.toml  README.md
idls/idl-core/crates/sol_meteora_dbc_interface/: Cargo.toml  README.md
idls/idl-core/crates/sol_moonshot_interface/: Cargo.toml  README.md
idls/idl-core/crates/sol_pump_amm_interface/: Cargo.toml  README.md
idls/idl-core/crates/sol_saros_interface/: Cargo.toml  README.md
idls/idl-core/crates/sol_serum_interface/: Cargo.toml  README.md
idls/idl-core/crates/sol_squads_interface/: Cargo.toml  README.md
idls/idl-core/crates/sol_stable_swap_interface/: Cargo.toml  README.md
idls/idl-core/scripts/: auto_integrate_dex.py  requirements.txt
idls/idl-core/scripts/templates/: account_parser.rs.jinja2  instruction_parser.rs.jinja2
idls/idl-core/src/: error.rs  instruction.rs  lib.rs  mata_parser.rs  runtime.rs
idls/idl-core/src/builtin_parsers/: helpers.rs  mod.rs
idls/idl-core/src/dex/: mod.rs
idls/idl-core/tests/: complete_defi_ecosystem_test.rs  runtime_real_transaction_test.rs  transaction_parsing_integration_test.rs
idls/idl-traits/: Cargo.toml  README.md
idls/idl-traits-derive/: Cargo.toml
idls/idl-traits-derive/src/: lib.rs
idls/idl-traits/examples/: basic_usage.rs
idls/idl-traits/src/: lib.rs
idls/idl-traits/src/derive/: mod.rs
idls/idl-traits/src/traits/: mod.rs  parser.rs
idls/idl-traits/src/types/: errors.rs  mod.rs  parsed.rs  prefilter.rs  pubkey.rs  updates.rs
test_batch_headers/sol_meteora_dlmm_interface/: Cargo.toml  README.md
test_batch_headers/sol_meteora_dlmm_interface/src/: constants.rs  errors.rs  lib.rs
test_batch_headers/sol_meteora_dlmm_interface/src/accounts/: binarray.rs  binarraybitmapextension.rs  lbpair.rs  mod.rs  oracle.rs  position.rs  positionv2.rs  presetparameter.rs
test_batch_headers/sol_meteora_dlmm_interface/src/events/: add_liquidity.rs  claim_fee.rs  claim_reward.rs  composition_fee.rs  fee_parameter_update.rs  fund_reward.rs  go_to_a_bin.rs  increase_observation.rs  initialize_reward.rs  lb_pair_create.rs  mod.rs  position_close.rs  position_create.rs  remove_liquidity.rs  swap.rs  update_position_lock_release_point.rs  update_position_operator.rs  update_reward_duration.rs  update_reward_funder.rs  withdraw_ineligible_reward.rs
test_batch_headers/sol_meteora_dlmm_interface/src/instructions/: add_liquidity.rs  add_liquidity_by_strategy.rs  add_liquidity_by_strategy_one_side.rs  add_liquidity_by_weight.rs  add_liquidity_one_side.rs  add_liquidity_one_side_precise.rs  claim_fee.rs  claim_reward.rs  close_position.rs  close_preset_parameter.rs  fund_reward.rs  go_to_a_bin.rs  increase_oracle_length.rs  initialize_bin_array.rs  initialize_bin_array_bitmap_extension.rs  initialize_customizable_permissionless_lb_pair.rs  initialize_lb_pair.rs  initialize_permission_lb_pair.rs  initialize_position.rs  initialize_position_by_operator.rs  initialize_position_pda.rs  initialize_preset_parameter.rs  initialize_reward.rs  migrate_bin_array.rs  migrate_position.rs  mod.rs  remove_all_liquidity.rs  remove_liquidity.rs  remove_liquidity_by_range.rs  set_activation_point.rs  set_pre_activation_duration.rs  set_pre_activation_swap_address.rs  swap.rs  swap_exact_out.rs  swap_with_price_impact.rs  toggle_pair_status.rs  update_fee_parameters.rs  update_fees_and_rewards.rs  update_position_operator.rs  update_reward_duration.rs  (+3 more)
test_batch_headers/sol_meteora_dlmm_interface/src/parsers/: accounts.rs  instructions.rs
test_batch_headers/sol_meteora_dlmm_interface/src/types/: activation_type.rs  add_liquidity_single_side_precise_parameter.rs  bin.rs  bin_liquidity_distribution.rs  bin_liquidity_distribution_by_weight.rs  bin_liquidity_reduction.rs  compressed_bin_deposit_amount.rs  customizable_params.rs  fee_info.rs  fee_parameter.rs  init_permission_pair_ix.rs  init_preset_parameters_ix.rs  layout_version.rs  liquidity_one_side_parameter.rs  liquidity_parameter.rs  liquidity_parameter_by_strategy.rs  liquidity_parameter_by_strategy_one_side.rs  liquidity_parameter_by_weight.rs  mod.rs  observation.rs  pair_status.rs  pair_type.rs  protocol_fee.rs  reward_info.rs  rounding.rs  static_parameters.rs  strategy_parameters.rs  strategy_type.rs  user_reward_info.rs  variable_parameters.rs
test_batch_headers/sol_squads_interface/: Cargo.toml  README.md
test_batch_headers/sol_squads_interface/src/: errors.rs  lib.rs
test_batch_headers/sol_squads_interface/src/accounts/: batch.rs  configtransaction.rs  mod.rs  multisig.rs  programconfig.rs  proposal.rs  spendinglimit.rs  vaultbatchtransaction.rs  vaulttransaction.rs
test_batch_headers/sol_squads_interface/src/instructions/: batch_accounts_close.rs  batch_add_transaction.rs  batch_create.rs  batch_execute_transaction.rs  config_transaction_accounts_close.rs  config_transaction_create.rs  config_transaction_execute.rs  mod.rs  multisig_add_member.rs  multisig_add_spending_limit.rs  multisig_change_threshold.rs  multisig_create.rs  multisig_create_v2.rs  multisig_remove_member.rs  multisig_remove_spending_limit.rs  multisig_set_config_authority.rs  multisig_set_rent_collector.rs  multisig_set_time_lock.rs  program_config_init.rs  program_config_set_authority.rs  program_config_set_multisig_creation_fee.rs  program_config_set_treasury.rs  proposal_activate.rs  proposal_approve.rs  proposal_cancel.rs  proposal_create.rs  proposal_reject.rs  spending_limit_use.rs  vault_batch_transaction_account_close.rs  vault_transaction_accounts_close.rs  vault_transaction_create.rs  vault_transaction_execute.rs
test_batch_headers/sol_squads_interface/src/parsers/: accounts.rs  instructions.rs
test_batch_headers/sol_squads_interface/src/types/: batch_add_transaction_args.rs  member.rs  (+33 more)
test_batch_headers/sol_stable_swap_interface/: Cargo.toml  README.md
test_batch_headers/sol_stable_swap_interface/src/: lib.rs
(+1718 files in other folders)
