[workspace]
members = [
    ".",
    "crates/sol_raydium_interface/sol_raydium_interface",
    "crates/sol_raydium_launchpad_interface/sol_raydium_launchpad_interface", 
    "crates/sol_pump_fun_interface/sol_pumpfun_interface",
    "crates/sol_orca_whirlpool_interface/sol_whirlpool_interface",
]

[workspace.dependencies]
solana-pubkey = { version = "2.4.0", features = ["borsh", "curve25519", "serde"] }
borsh = "^1.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[package]
name = "sol-idl-core"
description = "Core types for Vixen"
# authors = ["TODO"]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"

[dependencies.bs58]
version = "0.5.1"

[dependencies.base64]
version = "0.22"

[dependencies.yellowstone-grpc-proto]
version = "6.1.0"
default-features = false
features = [] 
 
[dependencies.borsh]
version = "^1.5"

[dependencies.num-derive]
version = "0.4.2"

[dependencies.num-traits]
version = "^0.2"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde-big-array]
optional = true
version = "^0.5"

[dependencies.serde_json]
version = "^1.0"

[dependencies.serde_with]
optional = true
version = "^3.0"
 
[dependencies.solana-cpi]
optional = true
version = "2.2.1"
 

[dependencies.solana-program-entrypoint]
optional = true
version = "2.3.0"
 

[dependencies.solana-pubkey]
features = ["borsh", "curve25519", "serde"]
version = "2.4.0"

[dependencies.thiserror]
version = "^1.0"

[dependencies.solana-signature]
version = "2.1.1"

[dependencies.solana-instruction]
version = "2.1.1"

[dependencies.solana-transaction-status]
version = "2.1.1"

[dependencies.solana-message]
version = "2.2.1"

[dependencies.solana-transaction]
version = "2.2.3"

[dependencies.solana-program]
version = "2.1.1"

[dependencies.solana-account-info]
version = "2.1.1"

[dependencies.solana-account]
version = "2.1.1"

[dependencies.solana-program-error]
version = "2.1.1"

[dependencies.solana-account-decoder]
version = "2.1.1"

[dependencies.solana-rpc-client-api]
version = "2.1.1"

[dependencies.bincode]
version = "1.3"

[dependencies.solana-sdk]
version = "2.1.1"

[dependencies.spl-token]
version = "6.0"

[dependencies.spl-token-2022]
version = "4.0"

[dependencies.spl-pod]
version = "0.3"

[dependencies.spl-token-group-interface]
version = "0.3"

[dependencies.spl-token-metadata-interface]
version = "0.4"

[dependencies.spl-type-length-value]
version = "0.5"

# Generated interface crates (required)
[dependencies.sol_raydium_interface]
path = "crates/sol_raydium_interface/sol_raydium_interface"

[dependencies.sol_raydium_launchpad_interface]
path = "crates/sol_raydium_launchpad_interface/sol_raydium_launchpad_interface"

[dependencies.sol_pumpfun_interface]
path = "crates/sol_pump_fun_interface/sol_pumpfun_interface"

[dependencies.sol_whirlpool_interface]
path = "crates/sol_orca_whirlpool_interface/sol_whirlpool_interface"

# 新生成的DEX协议接口库
[dependencies.sol_meteora_dbc_interface]
path = "crates/sol_meteora_dbc_interface"

[dependencies.sol_pump_amm_interface]
path = "crates/sol_pump_amm_interface"

[dependencies.sol_stable_swap_interface]
path = "crates/sol_stable_swap_interface"

[dependencies.sol_serum_interface]
path = "crates/sol_serum_interface"

[dependencies.sol_saros_interface]
path = "crates/sol_saros_interface"

[dependencies.sol_moonshot_interface]
path = "crates/sol_moonshot_interface"

# [dependencies.sol_squads_interface]
# path = "crates/sol_squads_interface"  # 暂时禁用，有编译错误

[features]
default = []

# Serde支持（传递给所有crates）
serde = [
    "sol_raydium_interface/serde",
    "sol_raydium_launchpad_interface/serde",
    "sol_pumpfun_interface/serde",
    "sol_whirlpool_interface/serde",
    "sol_meteora_dbc_interface/serde",
    "sol_pump_amm_interface/serde",
    "sol_stable_swap_interface/serde",
    "sol_serum_interface/serde",
    "sol_saros_interface/serde",
    "sol_moonshot_interface/serde",
    "sol_squads_interface/serde"
]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
solana-client = "2.1.1"