[package]
name = "sol_meteora_dlmm_interface"
version = "0.8.2"
edition = "2021"

[workspace]

[dependencies.borsh]
version = "^1.5"

[dependencies.num-derive]
version = "0.4.2"

[dependencies.num-traits]
version = "^0.2"

[dependencies.serde]
optional = true
version = "^1.0"

[dependencies.serde_with]
optional = true
version = "^3.0"

[dependencies.solana-program]
version = "^2.0"

[dependencies.thiserror]
version = "^1.0"

[features]
serde = ["dep:serde", "dep:serde_with"]
